syntax = "proto3";


package companyIntro;
//option go_package= "";
service companyIntro{
  rpc GetI (RequestGetI) returns (ResponseGetI){}
  rpc GetAll(RequestGetAll) returns (ResponseGetAll){}
}


message RequestGetI{

}


message ResponseGetI{
  repeated CompanyIntro companyIntro = 1;
  Page page = 2;

}


message RequestGetAll{
  int32 Status = 1;
  Page page = 2;
}

message ResponseGetAll{
  repeated CompanyIntro companyIntro = 1;
  Page page = 2;
}


// 分页数据
message Page{
  int32 PageNum = 1;
  int32 PageSize = 2;
  int32 Total = 3;
  int32 PageTotal = 4;
}

// 结构体
message CompanyIntro{
  int32  Id = 1;
  string Title = 2;
  string Content =3;
  int32 Status = 4;
  int32 SeqNo = 5;
}